Move index.html page.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../static/assets/css/style.css"/>
+    <link rel="stylesheet" href="static/assets/css/style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Coach Sportif Toulouse - CYCoaching</title>
 </head>
@@ -16,10 +16,10 @@
         <nav>
             <ul id="menu">
                 <li><a active href="#">Coaching</a></li>
-                <li><a href="a-propos.html">Qui suis-je ?</a></li>
+                <li><a href="templates/a-propos.html">Qui suis-je ?</a></li>
                 <li><a href="#">Résultats</a></li>
-                <li><a href="tarif.html">Tarifs</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="templates/tarif.html">Tarifs</a></li>
+                <li><a href="templates/contact.html">Contact</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>
         </nav>
