--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="static/assets/css/style.css"/>
+    <link rel="stylesheet" href="static/assets/css/index.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Coach Sportif Toulouse - CYCoaching</title>
 </head>
@@ -83,7 +84,7 @@
                     <p>Une pratique personnelle multisport, qui me permettra de me rapprocher au mieux de vos besoins (Boxe / MMA / Musculation / Randonnée / Sports de glisse / …)</p>
                 </div>
             </div>
-            Mettre boutton pour contacter
+            <a href="templates/contact.html" class="button">Réserve ta première séance</a>
         </section>
     
         <section>
