--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
         <div class="footer-container">
           <div class="footer-links">
             <a href="#">Coaching</a>
-            <a href="a-propos.html">Qui suis-je ?</a>
+            <a href="templates/a-propos.html">Qui suis-je ?</a>
             <a href="#">Résultats</a>
-            <a href="tarif.html">Tarifs</a>
-            <a href="#">Contact</a>
+            <a href="templates/tarif.html">Tarifs</a>
+            <a href="templates/contact.html">Contact</a>
             <a href="#">Blog</a>
           </div>
           <div class="footer-social-icons">
