Add reviews manually.
Could not use Maps API because business is BAS (Business As Service) without proper office address.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="static/assets/css/index.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="static/assets/js/get-review.js"></script>
     <title>Coach Sportif Toulouse - CYCoaching</title>
 </head>
 
@@ -90,126 +91,10 @@
         <section>
             <h2>Ils m'ont fait confiance !</h2>
             <div class="review-card-container">
-                <div class="review-wrapper">
-                    <div class="review-card">
-                        <div class="review-card-header">
-                          <div class="review-card-info">
-                            <h4>Julien Tahtane</h4>
-                            <div class="rating">
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                              </div>
-                          </div>
-                        </div>
-                        <div class="review-card-content">
-                          <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
-                        </div>
-                    </div>
-                    <div class="review-card">
-                        <div class="review-card-header">
-                            <div class="review-card-info">
-                            <h4>Julien Tahtane</h4>
-                            <div class="rating">
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="review-card-content">
-                            <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
-                        </div>
-                    </div>
-                    <div class="review-card">
-                        <div class="review-card-header">
-                            <div class="review-card-info">
-                            <h4>Julien Tahtane</h4>
-                            <div class="rating">
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="review-card-content">
-                            <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
-                        </div>
-                    </div>
-                    <div class="review-card">
-                        <div class="review-card-header">
-                            <div class="review-card-info">
-                            <h4>Julien Tahtane</h4>
-                            <div class="rating">
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="review-card-content">
-                            <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
-                        </div>
-                    </div>
-                    <div class="review-card">
-                        <div class="review-card-header">
-                            <div class="review-card-info">
-                            <h4>Julien Tahtane</h4>
-                            <div class="rating">
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="review-card-content">
-                            <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
-                        </div>
-                    </div>
-                    <div class="review-card">
-                        <div class="review-card-header">
-                            <div class="review-card-info">
-                            <h4>Julien Tahtane</h4>
-                            <div class="rating">
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="review-card-content">
-                            <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
-                        </div>
-                    </div>
-                    <div class="review-card">
-                        <div class="review-card-header">
-                            <div class="review-card-info">
-                            <h4>Julien Tahtane</h4>
-                            <div class="rating">
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                <span class="star fas fa-star"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="review-card-content">
-                            <p>Yoann est un super coach sportif qui a su comprendre parfaitement les attentes et les objectifs que je voulais atteindre! En plus il est très avenant et de bonne humeur ce qui rend les séances vraiment super!  Je recommande vivement!</p>
-                        </div>
-                    </div>
+                <div id="review-wrapper">
+                    <script>
+                        loadReviews();
+                    </script>
                 </div>
             </div>
         </section>
@@ -232,5 +117,6 @@
         </div>
         <p class="footer-text">Cy Coaching</p>
       </footer>
+
 </body>
 </html>
