Add boxing page to nav menu.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <nav>
             <ul id="menu">
                 <li><a active href="#">Coaching</a></li>
+                <li><a href="templates/boxe.html">Boxe</a></li>
                 <li><a href="templates/a-propos.html">Qui suis-je ?</a></li>
                 <li><a href="templates/tarif.html">Tarifs</a></li>
                 <li><a href="templates/contact.html">Contact</a></li>
