--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 
 <body>
     <header>
-        <!-- <div id="logo">
-            <img src="../static/assets/img/logo_cy_no_bg.png" alt="logo"/>
-            <h1>CYCoaching</h1>
-        </div> -->
-        <nav>
-            <ul id="menu">
-                <li><a active href="#">Coaching</a></li>
-                <li><a href="templates/boxe.html">Boxe</a></li>
-                <li><a href="templates/a-propos.html">Qui suis-je ?</a></li>
-                <li><a href="templates/tarif.html">Tarifs</a></li>
-                <li><a href="templates/contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div id="header-container">
+            <div id="logo">
+                <img src="../static/assets/img/logo-test.png" alt="logo"/>
+            </div>
+            <nav>
+                <ul id="menu">
+                    <li><a active href="#">Coaching</a></li>
+                    <li><a href="templates/boxe.html">Boxe</a></li>
+                    <li><a href="templates/a-propos.html">Qui suis-je ?</a></li>
+                    <li><a href="templates/tarif.html">Tarifs</a></li>
+                    <li><a href="templates/contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <div class="background-container">
