--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div id="header-container">
             <div id="logo">
-                <img src="../static/assets/img/logo-test.png" alt="logo"/>
+                <img src="static/assets/img/logo-test.png" alt="logo"/>
             </div>
             <nav>
                 <ul id="menu">
