Use folders instead of putting html files in /templates to have cleaner url.

--- a/a-propos/index.html
+++ b/a-propos/index.html
@@ -17,11 +17,11 @@
         </div>
         <nav>
             <ul id="menu">
-                <li><a href="../index.html">Coaching</a></li>
-                <li><a href="boxe.html">Boxe</a></li>
+                <li><a href="/">Coaching</a></li>
+                <li><a href="/boxe">Boxe</a></li>
                 <li><a active href="#">Qui suis-je ?</a></li>
-                <li><a href="tarif.html">Tarifs</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/tarif">Tarifs</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -57,11 +57,11 @@
     <footer>
         <div class="footer-container">
           <div class="footer-links">
-            <a href="../index.html">Coaching</a>
-            <a href="boxe.html">Boxe</a>
+            <a href="/">Coaching</a>
+            <a href="/boxe">Boxe</a>
             <a href="#">Qui suis-je ?</a>
-            <a href="tarif.html">Tarifs</a>
-            <a href="contact.html">Contact</a>
+            <a href="/tarif">Tarifs</a>
+            <a href="/contact">Contact</a>
           </div>
           <div class="footer-logo">
             <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
