--- a/boxe/index.html
+++ b/boxe/index.html
@@ -17,11 +17,11 @@
         </div>
         <nav>
             <ul id="menu">
-                <li><a href="../index.html">Coaching</a></li>
+                <li><a href="/">Coaching</a></li>
                 <li><a active href="#">Boxe</a></li>
-                <li><a href="a-propos.html">Qui suis-je ?</a></li>
-                <li><a href="tarif.html">Tarifs</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/a-propos">Qui suis-je ?</a></li>
+                <li><a href="/tarif">Tarifs</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -48,7 +48,7 @@
             <div class="image-solo-boxe">
                 <img src="../static/assets/img/boxe-solo.jpg" alt="Cours d'initiation à la boxe en solo">
             </div>
-            <a href="contact.html" class="button">Prêt(e) à mettre les gants ?</a>
+            <a href="/contact" class="button">Prêt(e) à mettre les gants ?</a>
         </section>
 
         <section class="contact">
@@ -76,11 +76,11 @@
     <footer>
         <div class="footer-container">
           <div class="footer-links">
-            <a href="../index.html">Coaching</a>
+            <a href="/">Coaching</a>
             <a href="#">Boxe</a>
-            <a href="a-propos.html">Qui suis-je ?</a>
-            <a href="tarif.html">Tarifs</a>
-            <a href="contact.html">Contact</a>
+            <a href="/a-propos">Qui suis-je ?</a>
+            <a href="/tarif">Tarifs</a>
+            <a href="/contact">Contact</a>
           </div>
           <div class="footer-logo">
             <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
