--- a/contact/index.html
+++ b/contact/index.html
@@ -17,10 +17,10 @@
         </div>
         <nav>
             <ul id="menu">
-                <li><a href="../index.html">Coaching</a></li>
-                <li><a active href="boxe.html">Boxe</a></li>
-                <li><a href="a-propos.html">Qui suis-je ?</a></li>
-                <li><a href="tarif.html">Tarifs</a></li>
+                <li><a href="/">Coaching</a></li>
+                <li><a active href="/boxe">Boxe</a></li>
+                <li><a href="/a-propos">Qui suis-je ?</a></li>
+                <li><a href="/tarif">Tarifs</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -79,10 +79,10 @@
     <footer>
         <div class="footer-container">
           <div class="footer-links">
-            <a href="../index.html">Coaching</a>
-            <a href="boxe.html">Boxe</a>
-            <a href="a-propos.html">Qui suis-je ?</a>
-            <a href="tarif.html">Tarifs</a>
+            <a href="/">Coaching</a>
+            <a href="/boxe">Boxe</a>
+            <a href="/a-propos">Qui suis-je ?</a>
+            <a href="/tarif">Tarifs</a>
             <a href="#">Contact</a>
           </div>
           <div class="footer-logo">
