--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <nav>
                 <ul id="menu">
                     <li><a active href="#">Coaching</a></li>
-                    <li><a href="templates/boxe.html">Boxe</a></li>
-                    <li><a href="templates/a-propos.html">Qui suis-je ?</a></li>
-                    <li><a href="templates/tarif.html">Tarifs</a></li>
-                    <li><a href="templates/contact.html">Contact</a></li>
+                    <li><a href="/boxe">Boxe</a></li>
+                    <li><a href="/a-propos">Qui suis-je ?</a></li>
+                    <li><a href="/tarif">Tarifs</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -86,7 +86,7 @@
                     <p>Une pratique personnelle multisport, qui me permettra de me rapprocher au mieux de vos besoins (Boxe / Musculation / Randonnée / Sports de glisse / …)</p>
                 </div>
             </div>
-            <a href="templates/contact.html" class="button">Réserve ta première séance</a>
+            <a href="/contact" class="button">Réserve ta première séance</a>
         </section>
     
         <section>
@@ -102,10 +102,10 @@
         <div class="footer-container">
           <div class="footer-links">
             <a href="#">Coaching</a>
-            <a href="templates/boxe.html">Boxe</a>
-            <a href="templates/a-propos.html">Qui suis-je ?</a>
-            <a href="templates/tarif.html">Tarifs</a>
-            <a href="templates/contact.html">Contact</a>
+            <a href="/boxe">Boxe</a>
+            <a href="/a-propos">Qui suis-je ?</a>
+            <a href="/tarif">Tarifs</a>
+            <a href="/contact">Contact</a>
           </div>
           <div class="footer-logo">
             <img src="static/assets/img/logo-cycoaching.png" alt="logo"/>
