--- a/tarif/index.html
+++ b/tarif/index.html
@@ -17,11 +17,11 @@
         </div>
         <nav>
             <ul id="menu">
-                <li><a href="../index.html">Coaching</a></li>
-                <li><a active href="boxe.html">Boxe</a></li>
-                <li><a href="a-propos.html">Qui suis-je ?</a></li>
+                <li><a href="/">Coaching</a></li>
+                <li><a active href="/boxe">Boxe</a></li>
+                <li><a href="/a-propos">Qui suis-je ?</a></li>
                 <li><a href="#">Tarifs</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -97,11 +97,11 @@
         <div class="footer-container">
           <div class="footer-links">
             <div class="footer-links">
-              <a href="../index.html">Coaching</a>
-              <a href="boxe.html">Boxe</a>
-              <a href="a-propos.html">Qui suis-je ?</a>
+              <a href="/">Coaching</a>
+              <a href="/boxe">Boxe</a>
+              <a href="/a-propos">Qui suis-je ?</a>
               <a href="#">Tarifs</a>
-              <a href="contact.html">Contact</a>
+              <a href="/contact">Contact</a>
             </div>
           </div>
           <div class="footer-logo">
