--- a/tarif/index.html
+++ b/tarif/index.html
@@ -108,8 +108,8 @@
             <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
           </div>
           <div class="footer-social-icons">
-            <a href="#"><i class="fab fa-instagram"></i> cycoaching</a>
-            <a href="#"><i class="fas fa-phone"></i>0608703251</a>
+            <a target="_blank" href="https://www.instagram.com/cy.coaching/"><i class="fab fa-instagram"></i> cycoaching</a>
+            <a href="#"><i class="fas fa-phone"></i> 0608703251</a>
           </div>
         </div>
     </footer>
