Make the logo clickable.

--- a/a-propos/index.html
+++ b/a-propos/index.html
@@ -12,9 +12,11 @@
 <body>
     <header>
       <div id="header-container">
-        <div id="logo">
-            <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
-        </div>
+        <a href="/">
+          <div id="logo">
+              <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+          </div>
+        </a>
         <nav>
             <ul id="menu">
                 <li><a href="/">Coaching</a></li>
@@ -63,9 +65,11 @@
             <a href="/tarif">Tarifs</a>
             <a href="/contact">Contact</a>
           </div>
-          <div class="footer-logo">
-            <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
-          </div>
+          <a href="/">
+            <div class="footer-logo">
+              <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+            </div>
+          </a>
           <div class="footer-social-icons">
             <a target="_blank" href="https://www.instagram.com/cy.coaching/"><i class="fab fa-instagram"></i> cycoaching</a>
             <a href="#"><i class="fas fa-phone"></i> 0608703251</a>
