--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 <body>
     <header>
         <div id="header-container">
-            <div id="logo">
-                <img src="static/assets/img/logo-cycoaching.png" alt="logo"/>
-            </div>
+            <!-- Make the logo clickable -->
+            <a href="/">
+                <div id="logo">
+                    <img src="static/assets/img/logo-cycoaching.png" alt="logo"/>
+                </div>
+            </a>
             <nav>
                 <ul id="menu">
-                    <li><a active href="#">Coaching</a></li>
+                    <li><a href="#">Coaching</a></li>
                     <li><a href="/boxe">Boxe</a></li>
                     <li><a href="/a-propos">Qui suis-je ?</a></li>
                     <li><a href="/tarif">Tarifs</a></li>
@@ -107,9 +110,11 @@
             <a href="/tarif">Tarifs</a>
             <a href="/contact">Contact</a>
           </div>
-          <div class="footer-logo">
-            <img src="static/assets/img/logo-cycoaching.png" alt="logo"/>
-          </div>
+          <a href="/">
+              <div class="footer-logo">
+                <img src="static/assets/img/logo-cycoaching.png" alt="logo"/>
+              </div>
+          </a>
           <div class="footer-social-icons">
             <a target="_blank" href="https://www.instagram.com/cy.coaching/"><i class="fab fa-instagram"></i> cycoaching</a>
             <a href="#"><i class="fas fa-phone"></i> 0608703251</a>
