Write button content in bold. Put bold class in common style.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <p>Une pratique personnelle multisport, qui me permettra de me rapprocher au mieux de vos besoins (Boxe / Musculation / Randonnée / Sports de glisse / …)</p>
                 </div>
             </div>
-            <a href="/contact" class="button">Réserve ta première séance</a>
+            <a href="/contact" class="contact-button"><span class="bold">Réserve ta première séance gratuite !</span></a>
         </section>
     
         <section>
