--- a/boxe/index.html
+++ b/boxe/index.html
@@ -50,7 +50,7 @@
             <div class="image-solo-boxe">
                 <img src="../static/assets/img/boxe-solo.jpg" alt="Cours d'initiation à la boxe en solo">
             </div>
-            <a href="/contact" class="button">Prêt(e) à mettre les gants ?</a>
+            <a href="/contact" class="button"><span class="bold">Prêt(e) à mettre les gants ?</span></a>
         </section>
 
         <section class="contact">
