Split header and footer in separate css files.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/assets/css/common-style.css"/>
+    <link rel="stylesheet" href="static/assets/css/common-header.css"/>
+    <link rel="stylesheet" href="static/assets/css/common-footer.css"/>
+
     <link rel="stylesheet" href="static/assets/css/index.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="static/assets/js/get-review.js"></script>
