--- a/boxe/index.html
+++ b/boxe/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="../static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/assets/css/common-style.css"/>
+    <link rel="stylesheet" href="../static/assets/css/common-header.css"/>
+    <link rel="stylesheet" href="../static/assets/css/common-footer.css"/>
+
     <link rel="stylesheet" href="../static/assets/css/boxe.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Coach Sportif Toulouse - CYCoaching</title>
