--- a/boxe/index.html
+++ b/boxe/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="../static/assets/css/common-header.css"/>
@@ -35,42 +36,51 @@
     <div class="content">
         <section>
             <h2>Découvrir la boxe</h2>
-            <div class="boxe-content">
-                <div class="column-image-boxe">
-                  <div class="image-groupe-boxe">
-                    <img src="../static/assets/img/boxe-groupe.jpg" alt="Cours d'initiation à la boxe en groupe">
-                  </div>
+            <div class="container-boxe">
+                <div class="left-column-boxe">
+                  <img id="column-image-boxe-web" src="../static/assets/img/boxe-groupe.jpg" alt="Cours d'initiation à la boxe en groupe">
+                  
+                  <img id="column-image-boxe-mobile" src="../static/assets/img/boxe-profil.jpg" alt="Cours d'initiation à la boxe en groupe">
                 </div>
-                <div class="column-text-boxe">
-                  <div class="text">
+                <div class="right-column-boxe">
+                  <div class="text-boxe-1 text">
                     <p>Tu as envie de découvrir une nouvelle discipline qui te permette de te défouler, <span class="bold">d'évacuer ton stress et de bosser ton cardio ?</p>
+                  </div>
+                  <div class="text-boxe-2-web text">
                     <p>Alors j'ai ce qu'il te faut, je propose des cours de boxe pour débutant dans le but de te transmettre ma passion pour ce sport.</p>
                     <p>Mais également pour que tu puisses évacuer tout tes tracas du quotidien à travers une discipline incroyable.</p>
-                  </div>
+                  </div>                
+                </div>
+                <div class="container-text-boxe-2-mobile text">
+                  <p>Alors j'ai ce qu'il te faut, je propose des cours de boxe pour débutant dans le but de te transmettre ma passion pour ce sport.</p>
+                  <p>Mais également pour que tu puisses évacuer tout tes tracas du quotidien à travers une discipline incroyable.</p>
                 </div>
             </div>
 
             <div class="image-solo-boxe">
-                <img src="../static/assets/img/boxe-solo.jpg" alt="Cours d'initiation à la boxe en solo">
+                <img class="image-solo-boxe" src="../static/assets/img/boxe-solo.jpg" alt="Cours d'initiation à la boxe en solo">
             </div>
             <a href="/contact" class="button"><span class="bold">Prêt(e) à mettre les gants ?</span></a>
         </section>
 
-        <section class="contact">
-        </section>
-
         <section>
           <h2>Découvrir le self defense</h2>
-          <div class="self-defense-content">
-            <div class="column-text-self">
-              <div class="text">
+          <div class="container-self-defense">
+            <div class="left-column-self-defense">
+              <div class="text-self-defense-1 text">
                 <p>Tu souhaites apprendre les rudiments d'un <span class="bold">self défense simple et efficace</span> afin d'optimiser ta sécurité ?</p>
+              </div>
+              <div class="text-self-defense-2-web text">
                 <p>Alors ne cherche pas plus loin, on abordera ensemble les notions de <span class="bold">prévention, de protection et de détermination</span>.</p>
                 <p>Ces bases complétées d'un panel technique développé durant les séances seront éprouvées lors de mises en situation.</p>
               </div>
             </div>
-            <div class="column-image-self">
-              <div class="image-self">
+            <div class="container-text-self-defense-2-mobile text">
+              <p>Alors ne cherche pas plus loin, on abordera ensemble les notions de <span class="bold">prévention, de protection et de détermination</span>.</p>
+              <p>Ces bases complétées d'un panel technique développé durant les séances seront éprouvées lors de mises en situation.</p>
+            </div>
+            <div class="right-column-self-defense">
+              <div class="image-self-defense">
                 <img src="../static/assets/img/self-defense-coaching.jpg" alt="Cours d'initiation au self defense">
               </div>
             </div>
