Add pricing page.

--- a/tarif/index.html
+++ b/tarif/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" href="../static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="../static/assets/css/common-header.css"/>
@@ -34,7 +34,7 @@
 
       <section>
           <div class="row">
-            <div class="column">
+            <div class="image-tarif-web column">
               <img src="../static/assets/img/coaching-individuel.jpg" alt="Séance de coaching individuel">
             </div>
             <div class="column">
@@ -54,6 +54,12 @@
       </section>
 
       <section>
+        <div class="image-tarif-mobile column">
+          <img src="../static/assets/img/tarif-1-mobile.jpg" alt="Séance de coaching individuel">
+        </div>
+      </section>
+
+      <section>
         <div class="row">
           <div class="column">
             <div class="card">
@@ -69,15 +75,20 @@
               </div>
             </div>
           </div>
-          <div class="column">
+          <div class="image-tarif-web column">
               <img src="../static/assets/img/coaching-groupe.jpg" alt="Séance de coaching en groupe">
           </div>
         </div>
       </section>
 
       <section>
+        <div class="image-tarif-mobile column">
+          <img src="../static/assets/img/tarif-2-mobile.jpg" alt="Séance de coaching individuel">
+        </div>
+
+      <section>
         <div class="row">
-          <div class="column">
+          <div class="image-tarif-web column">
             <img src="../static/assets/img/programme.jpg" alt="Séance de coaching en groupe">
           </div>
           <div class="column">
