Make footer mobile version.

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" href="../static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="../static/assets/css/common-header.css"/>
@@ -90,15 +90,16 @@
             <a href="/tarif">Tarifs</a>
             <a href="#">Contact</a>
           </div>
-          <a href="/">
-            <div class="footer-logo">
+          <div class="footer-logo">
+            <a href="/">
               <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
-            </div>
-          </a>
-          <div class="footer-social-icons">
+            </a>
+          </div>
+          <div class="footer-social">
             <a target="_blank" href="https://www.instagram.com/cy.coaching/"><i class="fab fa-instagram"></i> cycoaching</a>
             <a href="#"><i class="fas fa-phone"></i> 0608703251</a>
           </div>
+        </div>
         </div>
     </footer>
 </body>
