--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
             <a href="/tarif">Tarifs</a>
             <a href="/contact">Contact</a>
           </div>
-          <a href="/">
-              <div class="footer-logo">
-                <img src="static/assets/img/logo-cycoaching.png" alt="logo"/>
-              </div>
-          </a>
-          <div class="footer-social-icons">
+          <div class="footer-logo">
+            <a href="/">
+              <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+            </a>
+          </div>
+          <div class="footer-social">
             <a target="_blank" href="https://www.instagram.com/cy.coaching/"><i class="fab fa-instagram"></i> cycoaching</a>
             <a href="#"><i class="fas fa-phone"></i> 0608703251</a>
           </div>
