--- a/tarif/index.html
+++ b/tarif/index.html
@@ -120,15 +120,16 @@
               <a href="/contact">Contact</a>
             </div>
           </div>
-          <a href="/">
-            <div class="footer-logo">
+          <div class="footer-logo">
+            <a href="/">
               <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
-            </div>
-          </a>
-          <div class="footer-social-icons">
+            </a>
+          </div>
+          <div class="footer-social">
             <a target="_blank" href="https://www.instagram.com/cy.coaching/"><i class="fab fa-instagram"></i> cycoaching</a>
             <a href="#"><i class="fas fa-phone"></i> 0608703251</a>
           </div>
+        </div>
         </div>
     </footer>
 </body>
