Make contact page mobile version.

--- a/contact/index.html
+++ b/contact/index.html
@@ -33,11 +33,11 @@
     </header>
 
     <div class="content">
-      <section>
+      <section class="text-contact">
         <div class="text">
           <p>Je suis disponible pour du coaching à domicile ou en salle.</p>
           <p>Si tu souhaites progresser et t'épanouir dans une pratique sportive ludique et personnalisée, contacte moi ! </br>
-          Tu peux me contacter au 0608703251 ou en remplissant le formulaire de contact, je m'engage à te répondre dans les plus bref délais.</p>
+          Tu peux me contacter au <span class="bold">0608703251</span> ou en remplissant le formulaire de contact, je m'engage à te répondre dans les plus bref délais.</p>
           <p>À bientôt !</p>
         </div>
       </section>
