--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="static/assets/css/common-header.css"/>
+    <link rel="stylesheet" href="static/assets/css/burger-menu.css"/>
     <link rel="stylesheet" href="static/assets/css/common-footer.css"/>
 
     <link rel="stylesheet" href="static/assets/css/index.css"/>
@@ -17,21 +18,39 @@
 <body>
     <header>
         <div id="header-container">
-            <!-- Make the logo clickable -->
             <a href="/">
                 <div id="logo">
                     <img src="static/assets/img/logo-cycoaching.png" alt="logo"/>
                 </div>
             </a>
-            <nav>
-                <ul id="menu">
-                    <li><a href="#">Coaching</a></li>
+            <div class="menu-mobile-wrapper">
+                <input type="checkbox" class="toggle" />
+                
+                <div class="hamburger">
+                  <div class="bar"></div>
+                </div>
+          
+                <div class="menu menu-mobile">
+                  <ul>
+                    <li><a href="/">Coaching</a></li>
                     <li><a href="/boxe">Boxe</a></li>
                     <li><a href="/a-propos">Qui suis-je ?</a></li>
                     <li><a href="/tarif">Tarifs</a></li>
                     <li><a href="/contact">Contact</a></li>
-                </ul>
-            </nav>
+                  </ul>
+                </div>
+            </div>
+            <div class="menu menu-web">
+                <nav>
+                    <ul>
+                        <li><a href="/">Coaching</a></li>
+                        <li><a href="/boxe">Boxe</a></li>
+                        <li><a href="/a-propos">Qui suis-je ?</a></li>
+                        <li><a href="/tarif">Tarifs</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
