Fix parts hidden by sticky header.

--- a/a-propos/index.html
+++ b/a-propos/index.html
@@ -54,7 +54,7 @@
 
     <div class="content">
         <section>
-            <h2>À propos de moi</h2>
+            <h2 id="first-h2">À propos de moi</h2>
             <div class="about-content">
               <div class="column-image">
                 <div class="image">
