--- a/boxe/index.html
+++ b/boxe/index.html
@@ -55,7 +55,7 @@
 
     <div class="content">
         <section>
-            <h2>Découvrir la boxe</h2>
+            <h2 id="first-h2">Découvrir la boxe</h2>
             <div class="container-boxe">
                 <div class="left-column-boxe">
                   <img id="column-image-boxe-web" src="../static/assets/img/boxe-groupe.jpg" alt="Cours d'initiation à la boxe en groupe">
