--- a/contact/index.html
+++ b/contact/index.html
@@ -53,7 +53,7 @@
     </header>
 
     <div class="content">
-      <section class="text-contact">
+      <section class="text-contact" id="first-text">
         <div class="text">
           <p>Je suis disponible pour du coaching à domicile ou en salle.</p>
           <p>Si tu souhaites progresser et t'épanouir dans une pratique sportive ludique et personnalisée, contacte moi ! </br>
