--- a/tarif/index.html
+++ b/tarif/index.html
@@ -53,7 +53,7 @@
     </header>
 
       <section>
-          <div class="row">
+          <div class="row"  id="first-row">
             <div class="image-tarif-web column">
               <img src="../static/assets/img/coaching-individuel.jpg" alt="Séance de coaching individuel">
             </div>
