--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="2e-dng-aEgJQTSL9YHtp8MUy6QAuoLQWo_Sr2Pi7O9U" />
+
     <link rel="icon" href="static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="static/assets/css/common-header.css"/>
