--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="2e-dng-aEgJQTSL9YHtp8MUy6QAuoLQWo_Sr2Pi7O9U" />
+    <meta name="google-site-verification" content="axNHi-ia-aE4hMC6dBmpl5XFHlS8tkHWtJpTVBaeEOU" />
 
     <link rel="icon" href="static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/assets/css/common-style.css"/>
