--- a/boxe/index.html
+++ b/boxe/index.html
@@ -14,6 +14,16 @@
     <title>Coach Sportif Toulouse - CYCoaching</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TTRMH9G96E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TTRMH9G96E');
+</script>
+
 <body>
     <header>
       <div id="header-container">
