Try a meta description for main page.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="google-site-verification" content="2e-dng-aEgJQTSL9YHtp8MUy6QAuoLQWo_Sr2Pi7O9U" />
     <meta name="google-site-verification" content="axNHi-ia-aE4hMC6dBmpl5XFHlS8tkHWtJpTVBaeEOU" />
 
+    <meta name="description" content="Découvre CY Coaching, le coach sportif idéal sur Toulouse pour atteindre tes objectifs
+    de forme physique. Que tu souhaites gagner en masse musculaire, te remettre en forme, découvrir la boxe
+    pieds/poings, ou apprendre la self-défense féminine, je te fournirai un encadrement sur mesure. Profite d'un
+    apprentissage technique dans la bonne humeur et bénéficie d'un coaching personnalisé à l'écoute de tes besoins.">
+
     <link rel="icon" href="static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="static/assets/css/common-header.css"/>
@@ -71,7 +76,7 @@
         <div class="background-image"></div>
         <div class="overlay"></div>
         <div class="text-overlay">
-            <h1>CYCoaching</h1>
+            <h1>CY Coaching</h1>
             <h1>Coach sportif à Toulouse</h1>
             <h2>Spécialiste en recomposition corporelle et en boxe pieds poings</h2>
         </div>
